--- a/frontend-react/package.json
+++ b/frontend-react/package.json
@@ -42,5 +42,8 @@
       "last 1 firefox version",
       "last 1 safari version"
     ]
+  },
+  "devDependencies": {
+    "use-force-update-hook": "^2.1.0"
   }
 }
